[project]
name = "pack-mate-api"
version = "0.1.0"
description = ""
authors = [
    {name = "649000",email = "649000@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
