[project]
name = "pack-mate-api"
version = "0.1.0"
description = ""
authors = [
    {name = "649000",email = "649000@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12 <4.0"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "fastapi-utils (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
